--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "Kaan Sahin",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon --inspect server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "compose": "nuxt build && docker-compose build && docker-compose up"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
